--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
     <div class="container">
         <header>
             <h1>自我反省</h1>
+            <button id="perceptBtn" class="percept-btn" onclick="goToPercept()">菩薩戒金句</button>
         </header>
 
         <!-- Main Sections -->
